// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCellSet action Dispatches an action to create cell set to the reducer 1`] = `
Object {
  "payload": Object {
    "cellIds": Set {
      1,
      2,
      3,
    },
    "color": "#ff0000",
    "experimentId": "1234",
    "key": "a key",
    "name": "one",
    "type": "cellSets",
  },
  "type": "cellSets/create",
}
`;

exports[`createCellSet action Last action dispatches cellSetSave event 1`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
    "key": "a key",
    "saved": Object {},
  },
  "type": "cellSets/save",
}
`;
